--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.1",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.1",
     "react": "^16.6.3",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^16.6.3",
