--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.25.0",
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^16.6.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "2.1.1",
