memeroutes + post in editor

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://Mirjam:OMM2022@cluster-1.rhkhz.mongodb.net/MemeDB?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://Anna:123@cluster-1.rhkhz.mongodb.net/MemeDB?retryWrites=true&w=majority
 TOKEN_SECRET = jfdsöaf
