speech-to-text first working draft

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
-ATLAS_URI=mongodb+srv://Anna:123@cluster-1.rhkhz.mongodb.net/MemeDB?retryWrites=true&w=majority
 TOKEN_SECRET = jfdsöaf
+
+ATLAS_URI=mongodb+srv://Marina:MongoAniram2021@cluster-1.rhkhz.mongodb.net/MemeDB?retryWrites=true&w=majority;
