--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "2.1.1",
+    "react-speech-kit": "^3.0.1",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
