sing-up funktioniert

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 TOKEN_SECRET = jfdsöaf
 
-ATLAS_URI=mongodb+srv://Marina:MongoAniram2021@cluster-1.rhkhz.mongodb.net/MemeDB?retryWrites=true&w=majority;
+ATLAS_URI=mongodb+srv://Marina:MongoAniram2021@cluster-1.rhkhz.mongodb.net/MemeDB?retryWrites=true&w=majority
